GNOME Bugzilla – Bug 752012
rtph263pdepay: Fix initialization of debug category
Last modified: 2015-08-16 13:36:34 UTC
Created attachment 306901 [details] [review] Patch 1/1 Attached patch fixes initialization of rtph263pdepay's debug category so that's not "default".
commit a675e1893597c953ab1f0f0498b30f3b6f0b1deb Author: Stian Selnes <stian.selnes@gmail.com> Date: Mon Jun 16 16:14:28 2014 +0200 rtph263pdepay: init debug category https://bugzilla.gnome.org/show_bug.cgi?id=752012