rtph263pdepay: init debug category

https://bugzilla.gnome.org/show_bug.cgi?id=752012